fix z-index issue

--- a/src/components/Cover/SaveButton/index.module.css
+++ b/src/components/Cover/SaveButton/index.module.css
@@ -1,12 +1,14 @@
-.main {
-	position: relative;
-	z-index: 2;
-}
 .main svg {
 	will-change: transform, opacity;
 }
 .main span {
 	transition: opacity 150ms;
+}
+
+.save,
+.delete {
+	position: relative;
+	z-index: 2;
 }
 
 .save span,
